add change email handler with tests
